--- a/src/assets/css/extra_styles.css
+++ b/src/assets/css/extra_styles.css
@@ -49,3 +49,10 @@ a {
   text-align: center;
   padding: 2rem;
 }
+
+.arrow-icon {
+  cursor: pointer;
+}
+.arrow-icon:hover {
+  background-color: azure;
+}
